[backend] Update cve findings values